# wiki-scrapper

./: README.md  dank_debug.html  hypr_debug.html  pyproject.toml  wikiscrapper-checkpoint.json
hypr_wiki/wiki.hypr.land/: Configuring.md  Connect.md  Contributing-and-Debugging.md  Crashes-and-Bugs.md  FAQ.md  Getting-Started.md  Hypr-Ecosystem.md  IPC.md  Nix.md  Nvidia.md  Plugins.md  Useful-Utilities.md  index.md  version-selector.md
hypr_wiki/wiki.hypr.land/Configuring/: Animations.md  Binds.md  Dispatchers.md  Dwindle-Layout.md  Environment-variables.md  Example-configurations.md  Expanding-functionality.md  Gestures.md  Keywords.md  Master-Layout.md  Monitors.md  Multi-GPU.md  Performance.md  Permissions.md  Start.md  Tearing.md  Uncommon-tips-tricks.md  Using-hyprctl.md  Variables.md  Window-Rules.md  Workspace-Rules.md  XWayland.md
hypr_wiki/wiki.hypr.land/Contributing-and-Debugging/: Issue-Guidelines.md  PR-Guidelines.md  Translations.md
hypr_wiki/wiki.hypr.land/Getting-Started/: Installation.md  Master-Tutorial.md  Preconfigured-setups.md
hypr_wiki/wiki.hypr.land/Hypr-Ecosystem/: aquamarine.md  hyprcursor.md  hyprgraphics.md  hypridle.md  hyprland-qt-support.md  hyprland-qtutils.md  hyprlang.md  hyprlauncher.md  hyprlock.md  (+10 more)
scripts/: find_selector.py  test_fetcher_module.py  test_selector.py
tests/: test_renderer.py  test_utils.py
wikiscrapper/: .gitignore  __init__.py  __main__.py  cli.py  core.py  fetcher.py  formatter.py  robots.py  storage.py  utils.py
wikiscrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+27 files in other folders)
