[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiscrapper"
version = "0.2.0"
description = "A professional CLI tool to scrape documentation sites for LLM context."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "liyankova", email = "liyannkova@gmail.com" },
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "typer[all]",
    "markdownify",
    "rich",
    "playwright",
    "lxml"
]

[project.scripts]
wikiscrapper = "wikiscrapper.cli:app"
